Sun Jul  4 01:41:35 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	* font3d.cpp: revert last patch.

Sat Jul  3 15:24:40 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	* font3d.cpp: add "FTGL/" to #include's in order to match the
	path returned by pkg-config --cflags ftgl.

Tue June 1 8:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* drawboard3d.c: Smaller doubling cube and flag shadow fix

Mon May 24 8:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* drawboard3d.c, misc3d.c: Improve dice dot drawing

Wed May 17 9:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* drawboard3d.c, misc3d.c: Vary board tesselation based on accuracy setting

Wed May 12 10:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* drawboard3d.c: Add Taki-style rounded points

Mon May 10 10:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* shawdow.c: Fix shadow darnkess bug

Fri May 7 9:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* misc3d.c: Small bug fix for png position export

Sat Apr 17 12:00:59 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	* misc3d.c: fix a few includes.

Wed Mar 31 9:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* most files: Board preferences updated

Mon Mar 29 15:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* misc3d.c: Try to load old textures

Fri Mar 19 17:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* drawboard3d.c: Avoid readjusting board when cube changes

Mon Mar 8 7:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkcolour3d.c: Remove gtk warning message

Thu Mar 4 10:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* widget3d.c: Remove 3d accelerated test on non-windows platforms
		as didn't work very well...

Thu Jan 29 10:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* drawboard3d.c, misc3d.c: 3d quick draw-last options added

Wed Jan 28 10:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* drawboard3d.c, misc3d.c: 3d quick draw-chequer target help added
