@@ -18,7 +18,7 @@
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 *
-* $Id: misc3d.c,v 1.45 2004/11/15 11:17:40 Superfly_Jon Exp $
+* $Id: misc3d.c,v 1.46 2005/02/07 17:45:41 Superfly_Jon Exp $
 */
 
 #include "config.h"
@@ -31,8 +31,7 @@
 #else
 #include <io.h>
 #endif
-#include <GL/gl.h>
-#include <GL/glu.h>
+#include "glincl.h"
 #include "inc3d.h"
 #include "shadow.h"
 #include "renderprefs.h"
