@@ -1,3 +1,7 @@
+Mon Feb  7 17:41:35 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
+
+	* Add glincl.h openGL include file and use in other files
+
 Sun Jul  4 01:41:35 CEST 2004  Joern Thyssen  <jth@gnubg.org>
 
 	* font3d.cpp: revert last patch.
